adding the tighter letter spacing

--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -727,6 +727,10 @@ video {
   line-height: 1.75rem;
 }
 
+.tracking-tightest {
+  letter-spacing: -0.065em;
+}
+
 .text-gray-300 {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity, 1));
