adding the background image of header

--- a/src/input.css
+++ b/src/input.css
@@ -29,4 +29,8 @@
     src: local("Arad SemiBold"),
       url("../fonts/Arad/Arad-SemiBold.woff2") format("woff2");
   }
+  body {
+    background-image: url("public/images/headerBgDesktop.png");
+    background-repeat: no-repeat;
+  }
 }
