--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -593,6 +593,12 @@ video {
       url("../fonts/Arad/Arad-SemiBold.woff2") format("woff2");
 }
 
+body {
+  background-image: url("public/images/headerBgDesktop.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .fixed {
   position: fixed;
 }
